--- a/blockchain_from_scratch/index.html
+++ b/blockchain_from_scratch/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Blockchain - Doug Rosman</title>
+    <title>Blockchain From Scratch</title>
 </head>
 <body>
     <div class="wrapper">
@@ -14,7 +14,8 @@
             <h2>Doug Rosman</h2>
         </header>
         <main>
-            <p><a href="blockchain_from_scratch/">Build a Blockchain from Scratch With JavaScript</a></p>
+            <h3>Build a Blockchain from scratch with JavaScript</h3>
+            <p><a href="part1/">Part 1</a></p>
 
         </main>
     </div>
