--- a/blockchain_from_scratch/index.html
+++ b/blockchain_from_scratch/index.html
@@ -68,6 +68,9 @@
 </head>
 <body>
     <h1>Blockchain from Scratch with JavaScript</h1>
+    <h3><a href="part0">Part 0: Hashing Review</a></h3>
+    <h3><a href="part1">Part 1: Create the Blockchain</a></h3>
+    <h3><a href="part2">Part 2: Add Proof of Work</a></h3>
     <h2>Setup instructions:</h2>
     <section>
         <h4>Downloading and installing VS Code</h4>
