--- a/blockchain_from_scratch/part0/index.html
+++ b/blockchain_from_scratch/part0/index.html
@@ -72,6 +72,7 @@
     <h3><a href=".">Part 0: Hashing Review</a></h3>
     <h3><a href="../part1">Part 1: Create the Blockchain</a></h3>
     <h3><a href="../part2">Part 2: Add Proof of Work</a></h3>
+    <h3><a href="../part3">Part 3: Add Transactions and Mining Rewards</a></h3>
     <br>
     <h3>Code:</h3>
     <p>Copy and paste this into your main.js file.</p>
