--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <p><a href="blockchain_from_scratch/">Build a Blockchain from Scratch With JavaScript</a></p>
-
+            <p><a href="ethereum/">Ethereum</a></p>
         </main>
     </div>
 </body>
