add smart contracts folder

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <main>
             <p><a href="blockchain_from_scratch/">Build a Blockchain from Scratch With JavaScript</a></p>
             <p><a href="ethereum/">Ethereum</a></p>
+            <p><a href="smart_contracts/">Smart Contracts</a></p>
         </main>
     </div>
 </body>
