--- a/smart_contracts/basic_example/index.html
+++ b/smart_contracts/basic_example/index.html
@@ -36,20 +36,25 @@
         <input type="text" id="fname" name="fname" value=""><br>
         <input type="submit" value="Submit">
       </form>
+      <p>Instructions: If you enter the number 199, you should be prompted to complete a metamask transaction.</p>
     </section>
 
     <section>
       <h2>Info</h2>
       <h4>wallet address (main):</h4>
-      <p>0x6935874D51CD8160791566C7741ac8305255d263</p>
+      <p class="copy">0x6935874D51CD8160791566C7741ac8305255d263</p>
 
-      <h4>wallet addres (seconday):</h4>
-      <p>0xFd892bB9b092294ec828B4cC4Ad8c621030c92B2</p>
+      <h4>wallet address (secondary):</h4>
+      <p class="copy">0xFd892bB9b092294ec828B4cC4Ad8c621030c92B2</p>
 
       <h4>Infura Project ID:</h4>
       <p>869f6df08e2a4351a92b4980853fb617</p>
-      <p>Hidden Key:</p>
-      <p class="hidden">986f1dcf922e4e8cabb75a3db8811884</p>
+      
+      <div class="hidden">
+        <h4>Hidden Key:</h4>
+        <p class="redacted">986f1dcf922e4e8cabb75a3db8811884</p>
+      </div>
+      
     </section>
   </div>
   
