--- a/smart_contracts/basic_example/index.html
+++ b/smart_contracts/basic_example/index.html
@@ -48,7 +48,7 @@
       <p class="copy">0xFd892bB9b092294ec828B4cC4Ad8c621030c92B2</p>
 
       <h4>Infura Project ID:</h4>
-      <p>869f6df08e2a4351a92b4980853fb617</p>
+      <p class="copy">869f6df08e2a4351a92b4980853fb617</p>
       
       <div class="hidden">
         <h4>Hidden Key:</h4>
