--- a/smart_contracts/basic_example/index.html
+++ b/smart_contracts/basic_example/index.html
@@ -50,10 +50,7 @@
       <h4>Infura Project ID:</h4>
       <p class="copy">869f6df08e2a4351a92b4980853fb617</p>
       
-      <div class="hidden">
-        <h4>Hidden Key:</h4>
-        <p class="redacted">986f1dcf922e4e8cabb75a3db8811884</p>
-      </div>
+      <div class="h"></div>
       
     </section>
   </div>
