--- a/smart_contracts/basic_example/index.html
+++ b/smart_contracts/basic_example/index.html
@@ -47,10 +47,15 @@
       <h4>wallet address (secondary):</h4>
       <p class="copy">0xFd892bB9b092294ec828B4cC4Ad8c621030c92B2</p>
 
+      <h4>Infura Project Name:</h4>
+      <p>Basic Contract Example</p>
       <h4>Infura Project ID:</h4>
       <p class="copy">869f6df08e2a4351a92b4980853fb617</p>
-      
       <div class="h"></div>
+
+      <h4>Infura Project Endpoints (Ropsten)</h4>
+      <p class="copy">https://ropsten.infura.io/v3/869f6df08e2a4351a92b4980853fb617</p>
+      <p class="copy">wss://ropsten.infura.io/ws/v3/869f6df08e2a4351a92b4980853fb617</p>
       
     </section>
   </div>
