--- a/smart_contracts/basic_example/index.html
+++ b/smart_contracts/basic_example/index.html
@@ -8,6 +8,7 @@
   <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="libs/web3.min.js"></script>
   <script src="eth_stuff/contractABI.js"></script>
+  
 
   <title>Basic Example</title>
 </head>
@@ -64,7 +65,8 @@
       
     </section>
   </div>
+  <!-- <script type="module" src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script> -->
   <script src="utils.js"></script>
-  <script src="app.js"></script>
+  <script src="app2.js"></script>
 </body>
 </html>
