--- a/smart_contracts/basic_example/index.html
+++ b/smart_contracts/basic_example/index.html
@@ -6,10 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
   <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="libs/web3.min.js"></script>
   <script src="eth_stuff/contractABI.js"></script>
-  
-
   <title>Basic Example</title>
 </head>
 <body>
@@ -67,6 +64,7 @@
   </div>
   <!-- <script type="module" src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script> -->
   <script src="utils.js"></script>
-  <script src="app2.js"></script>
+  <script type="module" src="app4.js"></script>
+  
 </body>
 </html>
