--- a/smart_contracts/index.html
+++ b/smart_contracts/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
       <p><a href="basic_example">Basic Example</a></p>
+      <p><a href="basic_example2">Basic Example 2</a></p>
     </main>
-    
   </div>
   
 
