--- a/smart_contracts/basic_example2/index.html
+++ b/smart_contracts/basic_example2/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
-  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="eth_stuff/contractABI.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
   <title>Basic Example 2</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
       <p class="copy">0xAa7C9DAB0C7787353da45a8c2ba2eB4ac9A1Ac1B</p>
 
       <h4>Contract Address (Rinkeby):</h4>
-      <p class="copy">0xB583DDA779b86D598Dbf597A6b540972f5AFdEB1</p>
+      <p class="copy">0x1F4F8C7f4F1b9c6B088797F792192E51AACB7D1A</p>
     </section>
   </div>
   <script src="utils.js"></script>
