add mores stuff

--- a/erc20_demo_prep/index.html
+++ b/erc20_demo_prep/index.html
@@ -24,10 +24,10 @@
   <div id="sketch"></div>
   <div class="patriotic-text flags">
     <img src="gifs/usa_flag.gif" alt="usa flag gif">
-    <h2>An ounce of appreciation is an ounce of protein!</h2>
+    <h2 class="twirl">An ounce of appreciation is an ounce of protein!</h2>
     <img src="gifs/usa_flag.gif" alt="usa flag gif">
   </div>
-  <div class="patriotic-text no">
+  <div class="patriotic-text">
     <h3>Make sure you are signed in with your White House certified ID</h4>
   </div>
   
