--- a/erc20_demo_prep/index.html
+++ b/erc20_demo_prep/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="libraries/ethers-5.0.umd.min.js"></script>
-  <script src="libraries/jquery-3.5.1.min.js"></script>
-  <script src="libraries/ml5.min.js"></script>
-  <script src="libraries/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
   <title>Prove yourself, patriot!</title>
@@ -28,7 +28,7 @@
     <img src="gifs/usa_flag.gif" alt="usa flag gif">
   </div>
   <div class="patriotic-text">
-    <h3>Make sure you are signed in with your White House certified ID</h4>
+    <h3>Make sure you are signed in with your WHID</h4>
   </div>
   
   <script src="ethereum.js"></script>
