increase confidence threshold

--- a/erc20_demo_prep/index.html
+++ b/erc20_demo_prep/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="libraries/jquery-3.5.1.min.js"></script>
   <script src="libraries/ethers-5.0.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
@@ -17,8 +18,8 @@
   </video>
   
   <div class="patriotic-text">
-    <h1 class="title">Good Day Citizen!</h1>
-    <h2>Have you shown appreciation for your country today?</h2>
+    <h1 class="title">Good Day Fellow American!</h1>
+    <h2>Have you shown appreciation for the US of A today?</h2>
   </div>
     
   <div id="sketch"></div>
@@ -30,8 +31,10 @@
   <div class="patriotic-text">
     <h3>Make sure you are signed in with your WHID</h4>
   </div>
+
+  <h1 id="patriot-confirmed">PATRIOT CONFIRMED</h1>
   
-  <script src="ethereum.js"></script>
+  
   <script src="app.js"></script>
 </body>
 </html>
