--- a/erc721/ColorTokenDoug/index.html
+++ b/erc721/ColorTokenDoug/index.html
@@ -20,7 +20,7 @@
 
   <div class="section" id="section__main">
     <h1 id="main__title">Color Token</h1>
-    <div id="sketch"></div>
+    <div id="minted-color"></div>
     <button id="generate-color">Generate Color</button>
   </div>
 
