add function to display minted color

--- a/erc721/ColorTokenDoug/index.html
+++ b/erc721/ColorTokenDoug/index.html
@@ -20,7 +20,10 @@
 
   <div class="section" id="section__main">
     <h1 id="main__title">Color Token</h1>
-    <div id="minted-color"></div>
+    <div id="minted-color">
+      <div class="minted-color__tile"></div>
+      <div class="minted-color__hex">#??????</div>
+    </div>
     <button id="generate-color">Generate Color</button>
   </div>
 
