--- a/erc721/ColorTokenDoug/index.html
+++ b/erc721/ColorTokenDoug/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="libraries/jquery-3.5.1.min.js"></script>
   <script src="libraries/ethers-5.0.umd.min.js"></script>
+  <script src="libraries/jquery-3.5.1.min.js"></script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -21,16 +22,11 @@
       <div class="minted-color__tile"></div>
       <div class="minted-color__hex">#??????</div>
     </div>
-    <div id="loading"></div>
     <button id="generate-color">Generate Color</button>
   </div>
 
   <div class="section" id="section__owned">
-    <div id="owned__top-bar">
-      <h2 id="owned__title">Colors owned by <span id="address"></span></h2>
-      <button id="owned__send">Send</button>
-    </div>
-    
+    <h2 id="owned__title">Owned Colors</h2>
     <div class="color-gallery"></div>
   </div>
   <script src="app.js"></script>
