--- a/erc721/ColorTokenDoug/index.html
+++ b/erc721/ColorTokenDoug/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="libraries/jquery-3.5.1.min.js"></script>
   <script src="libraries/ethers-5.0.umd.min.js"></script>
-  <script src="libraries/jquery-3.5.1.min.js"></script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -22,13 +21,30 @@
       <div class="minted-color__tile"></div>
       <div class="minted-color__hex">#??????</div>
     </div>
+    <div id="loading"></div>
     <button id="generate-color">Generate Color</button>
   </div>
 
   <div class="section" id="section__owned">
-    <h2 id="owned__title">Owned Colors</h2>
+    <div id="owned__top-bar">
+      <h2 id="owned__title">Colors owned by <span id="address"></span></h2>
+      <p id="owned__send">Click a token to send it</p>
+    </div>
     <div class="color-gallery"></div>
   </div>
+
+  <div class="send-modal">
+    <div class="send-modal__bg"></div>
+    <div class="send-modal__content">
+      <div class="send-modal__close">&#10005;</div>
+      <label for="token-id">Token to send:<span id="invalid-token">You do not own that token</span></label><br>
+      <input type="text" id="token-id" placeholder="eg. 1255000255"><br>
+      <label for="recipient-address">Recipient Address:<span id="invalid-address">Invalid address</span></label><br>
+      <input type="text" id="recipient-address" placeholder="eg. 0x6935874D51CD8160791566C7741ac8305255d263">
+      <button class="send-modal__btn">Send</button>
+    </div>
+  </div>
+
   <script src="app.js"></script>
 </body>
 </html>
