fix some formatting

--- a/erc721/ColorTokenDoug/index.html
+++ b/erc721/ColorTokenDoug/index.html
@@ -37,7 +37,7 @@
     <div class="send-modal__bg"></div>
     <div class="send-modal__content">
       <div class="send-modal__close">&#10005;</div>
-      <label for="token-id">Token to send:<span id="invalid-token">You do not own that token</span></label><br>
+      <label for="token-id">Token to send:<span id="invalid-token">Invalid Token</span></label><br>
       <input type="text" id="token-id" placeholder="eg. 1255000255"><br>
       <label for="recipient-address">Recipient Address:<span id="invalid-address">Invalid address</span></label><br>
       <input type="text" id="recipient-address" placeholder="eg. 0x6935874D51CD8160791566C7741ac8305255d263">
